# NN_Error

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: CITS_Class.py  README.md  im2spec_dataset.py  multiscale_fnoim2spec_error.ipynb  multiscale_im2spec_error.ipynb  stm_multiscale_im2spec_error.ipynb  stm_utils.py
notebooks/PFM/: BEPS_functions.py  multiscale_im2spec_error.ipynb  test_fnoim2spec_error.ipynb  test_fnoim2spec_error_2.ipynb  test_im2spec_error.ipynb
notebooks/STM/: stm_multiscale_im2spec_error.ipynb  stm_multiscale_im2spec_error3.ipynb
src/nnerror/: __init__.py  plot_functions.py  training_functions.py
src/nnerror.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nnerror/networks/: __init__.py  im2spec_models.py  neuralop_im2spec.py  nn_combiners.py
src/nnerror/utils/: __init__.py  im2spec_dataset.py  image_utils.py
tests/: test_imports.py
